--- a/gh-web-app/src/App.css
+++ b/gh-web-app/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  
+
 }
 
 .App-logo {
@@ -9,11 +9,11 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  // align-items: center;
+  // justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
