--- a/gh-web-app/src/App.css
+++ b/gh-web-app/src/App.css
@@ -5,21 +5,35 @@
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
+
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 10vh;
+  min-height: 5vh;
   display: flex;
+  padding: 20px;
   flex-direction: column;
   // align-items: center;
   // justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 1vmin);
   color: white;
+}
+
+.providerManagerButton {
+  margin: 20px;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.Dashboard-content {
+  margin: 20px;
+}
+
+.TableManager {
+  margin: 20px;
 }
 
 @keyframes App-logo-spin {
