--- a/gh-web-app/src/App.css
+++ b/gh-web-app/src/App.css
@@ -2,12 +2,6 @@
 
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 5vh;
@@ -18,6 +12,25 @@
   // justify-content: center;
   font-size: calc(10px + 1vmin);
   color: white;
+}
+
+.ProviderSelect
+{
+  border-radius: 5px;
+  margin: 5px;
+  background-color: transparent;
+}
+
+.ToolBar {
+  display: flex;
+}
+
+.LeftDock {
+  text-align: left;
+}
+
+.RightDock {
+  text-align: right;
 }
 
 .providerManagerButton {
@@ -34,13 +47,4 @@
 
 .TableManager {
   margin: 20px;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
