--- a/gh-web-app/src/App.css
+++ b/gh-web-app/src/App.css
@@ -3,22 +3,60 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 5vh;
+  background-color: #4ab4ff;
+  height: 10vh;
   display: flex;
-  padding: 20px;
+  padding: 0px 20px 0px 20px;
+  margin: 0;
   flex-direction: column;
-  // align-items: center;
-  // justify-content: center;
   font-size: calc(10px + 1vmin);
-  color: white;
+  color: #FFFFFF;
+  // box-shadow: 0 4px 2px 0px rgba(100, 100, 100, 0.3);
+}
+
+.MainContent
+{
+  height: 89vh;
+  padding: 0;
+  display: flex;
+}
+
+.Dashboard-Container
+{
+  border: 0.1px solid rgba(0,0,0,0);
+  height: 100%;
+  width: 20%;
+  background-color: #f5f5f5;
+}
+
+.ProviderManager {
+  float: left;
 }
 
 .ProviderSelect
 {
   border-radius: 5px;
   margin: 5px;
-  background-color: transparent;
+  background-color:transparent;
+  border: none;
+  width: 100%;
+  display:inline-block;
+  text-align: left;
+  cursor:pointer;
+  color:#4abfff;
+  font-size:17px;
+  padding:5px 31px;
+  text-decoration:none;
+  box-shadow: none;
+}
+
+.ProviderSelect:hover {
+	background-color: #e1f2fe;
+}
+.ProviderSelect:active {
+	position:relative;
+  background-color: #b6ddfe;
+	top:1px;
 }
 
 .ToolBar {
